- fix autoplay guies

--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -54,7 +54,8 @@
       </ul>
     </div>
     <div class="w-full md:w-3/4 lg:w-2/3">
-      <iframe width="100%" height="400" src="assets/img/LyticsVideo.mp4" title="5 TRUCOS para AHORRAR ENERGÍA ELÉCTRICA" class="rounded-lg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <video width="100%" height="400" src="assets/img/LyticsVideo.mp4" title="5 TRUCOS para AHORRAR ENERGÍA ELÉCTRICA" class="rounded-lg" controls>Tu navegador no soporta el elemento de video.
+      </video>
     </div>
   </div>
 </div>
