- change name huella de carbono

--- a/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -1,9 +1,7 @@
-<app-panel-title title="Tu Huella de Carbono" description="Visualiza el impacto ambiental que genera tu consumo energético.
+<app-panel-title title="Huella de Carbono" description="Visualiza el impacto ambiental que genera tu consumo energético.
 Puedes ver el impacto sumado de todos tus dispositivos."></app-panel-title>
 <div class="py-1 px-3">
   <div class="flex items-center space-x-4">
-
-
   </div>
     <div class="container mx-auto py-4">
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
