- change card consumo dashboard.component.html

--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -78,7 +78,7 @@
     <app-card-real-time id="step4"
       [iconClasses]="'fas fa-dollar-sign'"
       [titleCard]="'Consumo Mensual'"
-      [subtitleCard]="'Consumo $'"
+      [subtitleCard]="'Costo total este mes (ARS)'"
       [valueProgress]="10"
       [maxProgress]="100"
       [colorProgress]="'progress progress-warning w-ful'"
