--- a/frontend/src/app/routes/configuracion/configuracion.component.html
+++ b/frontend/src/app/routes/configuracion/configuracion.component.html
@@ -133,7 +133,7 @@
                             (ngModelChange)="onAlertChange()"
                             class="text-lg text-gray-600 border border-gray-300 rounded-md p-1 w-20"
                     />
-                    <span class="ml-1 text-lg text-gray-600">Kwh</span>
+                    <span class="ml-1 text-lg text-gray-600">Watts</span>
                 </div>
                 <label class="relative inline-flex items-center cursor-pointer ml-4">
                     <input type="checkbox" [(ngModel)]="alertSettings.highConsumptionActive" class="sr-only peer" (ngModelChange)="onAlertChange()">
