--- a/frontend/src/app/routes/mis-dispositivos/mis-dispositivos.component.html
+++ b/frontend/src/app/routes/mis-dispositivos/mis-dispositivos.component.html
@@ -31,7 +31,12 @@
           *ngFor="let dispositivo of dispositivos"
           class="bg-white p-4 rounded-lg shadow-md transform transition-transform hover:scale-105 flex flex-col items-center">
 
-          <div class="absolute top-2 right-2 flex space-x-2">
+          <div class="flex space-x-2 mb-4">
+            <button
+              (click)="goToAlerts(dispositivo.deviceId)"
+              class="text-blue-500 hover:text-blue-700 p-1">
+              <i class="fa-solid fa-bell"></i>
+            </button>
             <button
               (click)="goToConfiguration(dispositivo.deviceId)"
               class="text-green-500 hover:text-green-700 p-1">
