--- a/frontend/src/app/routes/configuracion/configuracion.component.html
+++ b/frontend/src/app/routes/configuracion/configuracion.component.html
@@ -261,7 +261,7 @@
                             (ngModelChange)="onAlertChange()"
                             class="text-lg text-gray-600 border border-gray-300 rounded-md p-1 w-20"
                     />
-                    <span class="ml-1 text-lg text-gray-600">C</span>
+                    <span class="ml-1 text-lg text-gray-600">°C</span>
                 </div>
                 <label class="relative inline-flex items-center cursor-pointer">
                     <input type="checkbox" [(ngModel)]="alertSettings.highTemperatureActive" class="sr-only peer" (ngModelChange)="onAlertChange()">
