--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -60,18 +60,65 @@
   </div>
 </div>
 
-      <!-- Sección de Imágenes -->
-      <div class="bg-white p-6 rounded-lg shadow-lg mt-6">
-        <h2 class="text-2xl font-bold mb-4 text-center">Cómo hacer tu casa más eficiente</h2>
-        <div class="flex flex-wrap justify-center gap-6 mt-6">
-          <div class="bg-white p-4 rounded shadow-lg">
-            <img src="assets/img/casa%20eficiente.webp" alt="Consejo 1" class="rounded-lg w-full max-w-xs h-40 object-cover">
-          </div>
-          <div class="bg-white p-4 rounded shadow-lg">
-            <img src="assets/img/casasPersonas.webp" alt="Consejo 2" class="rounded-lg w-full max-w-xs h-40 object-cover">
-          </div>
-        </div>
+<div class="text-center flex flex-col items-center justify-center mt-8">
+  <h2 class="text-3xl font-extrabold my-2">Aprende sobre tu consumo</h2>
+<h5 class="font-bold text-primary mb-8">Información...</h5>
+</div>
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 justify-center p-3">
+  <!-- Card 1 -->
+  <div class="card card-compact bg-base-100 w-full shadow-xl">
+    <figure class="h-48">
+      <img
+        src="https://laciudadweb.com.ar/content/images/size/w2000/format/avif/2024/04/88888-1.jpg"
+        alt="Huella de carbono"
+        class="h-full w-full object-cover"/>
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title">¿Cómo entender la factura de luz de tu hogar?</h2>
+      <p>Es importante que sepas cómo se conforma el precio y de qué manera leer tu factura.</p>
+      <div class="card-actions justify ">
+        <a class="no-underline mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover"
+        href="https://laciudadweb.com.ar/comienzan-a-llegar-las-facturas-de-edenor-al-conurbano-impagables/" target="_blank">Ver</a>
       </div>
+    </div>
+  </div>
+
+  <!-- Card 2 -->
+  <div class="card card-compact bg-base-100 w-full shadow-xl">
+    <figure class="h-48">
+      <img
+        src="https://lazosdelagente.com/wp-content/uploads/2021/03/PORTADA-HABITOS-DE-CONSUMO-INTELIGENTE.png"
+        alt="Sustentabilidad"
+        class="h-full w-full object-cover"/>
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title">Ahorra más con hábitos de consumo inteligentes</h2>
+      <p>Le presentamos una serie de consejos prácticos para ahorrar.</p>
+      <div class="card-actions justify">
+        <a class="no-underline mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover"
+        href="https://canalantigua.tv/2024/09/28/ahorra-mas-con-habitos-de-consumo-inteligentes/" target="_blank">Ver</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Card 3 -->
+  <div class="card card-compact bg-base-100 w-full shadow-xl">
+    <figure class="h-48">
+      <img
+        src="https://www.infobae.com/resizer/v2/https%3A%2F%2Fs3.amazonaws.com%2Farc-wordpress-client-uploads%2Finfobae-wp%2Fwp-content%2Fuploads%2F2018%2F04%2F04111232%2FAhorro-1920.jpg?auth=45f6f57377a4f6f8733230a665867c9940e448f23b376f05bbf2b7f4f7c603e1&smart=true&width=992&height=558&quality=85"
+        alt="Factura de luz y gas"
+        class="h-full w-full object-cover"/>
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title">10 formas de reducir tu huella de carbono</h2>
+      <p>Sé verde, te damos algunos sencillos consejos que puedes incorporar a tu vida cotidiana y lograr un planeta más vivible.</p>
+      <div class="card-actions justify">
+        <a class="no-underline mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover"
+        href="https://www.infobae.com/espacio-no-editorial/2019/01/25/los-13-tips-para-lograr-un-consumo-inteligente-y-pagar-menos-en-la-factura-de-luz/" target="_blank">Ver</a>
+      </div>
+    </div>
+  </div>
+</div>
 
       <!-- Sección de Consejos -->
       <section class="bg-gray-50 py-10">
